--- a/pseudocode_dump/yp_symbol_conversions.tex
+++ b/pseudocode_dump/yp_symbol_conversions.tex
@@ -6,10 +6,7 @@
 \usepackage{makeidx}
 \usepackage{graphicx}
 \usepackage{booktabs}
-\usepackage[
-	   style=ieee
-	   ]
-	   {biblatex}
+\usepackage[style=ieee]{biblatex}
 \usepackage[a4paper,width=170mm,top=18mm,bottom=22mm,includeheadfoot]{geometry}
 \usepackage{mathtools}
 \usepackage{concmath}
@@ -28,6 +25,7 @@
 	$\mu$ & \texttt{actualizing\_state \footnote{Alternatively, machine\_state.}} \\
 	
 \end{tabular}
+
 
 \printbibliography
 \end{document}
